--- a/CobroCoactivo/web/plantillas/PlantillaGeneral.xhtml
+++ b/CobroCoactivo/web/plantillas/PlantillaGeneral.xhtml
@@ -37,10 +37,6 @@
         <link rel="stylesheet" href="#{request.contextPath}/recursos/css/PrimefacesOverride.css" />
 
 
-
-
-
-
         <!-- Morris chart -->
         <link rel="stylesheet" href="#{request.contextPath}/recursos/bower_components/morris.js/morris.css"></link>
         <!-- jvectormap -->
@@ -55,6 +51,14 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+
+        <!-- daterange picker -->
+        <link rel="stylesheet" href="#{request.contextPath}/bower_components/bootstrap-daterangepicker/daterangepicker.css"/>
+        <!-- bootstrap datepicker -->
+        <link rel="stylesheet" href="#{request.contextPath}/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css"/>
+
+        <!-- Bootstrap Color Picker -->
+        <link rel="stylesheet" href="#{request.contextPath}/recursos/bower_components/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css" />
         <script src="#{request.contextPath}/recursos/js/HabilitarCamposEditables.js" type="text/javascript"></script>
         <link href="#{request.contextPath}/recursos/css/jquery.dataTables.css" rel="stylesheet" type="text/css"/>
         <script src="#{request.contextPath}/recursos/js/html5shiv.min.js" type="text/javascript"></script>
@@ -78,7 +82,6 @@
                 cursor: pointer
             }
         </style>
-
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic"></link>
         <link rel="stylesheet" href="#{request.contextPath}/recursos/css/floatingButton.css" />
         <link rel="stylesheet" href="#{request.contextPath}/recursos/css/Content.css" />
@@ -1032,6 +1035,13 @@
         <script src="#{request.contextPath}/recursos/cnv/js/paste.js" type="text/javascript"></script>
         <script src="#{request.contextPath}/recursos/cnv/js/unload.js" type="text/javascript"></script>
         <script src="#{request.contextPath}/recursos/cnv/js/jScript.js" type="text/javascript"></script>
+        <!-- date-range-picker -->
+        <script src="#{request.contextPath}/recursos/bower_components/moment/min/moment.min.js"></script>
+        <script src="#{request.contextPath}/recursos/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+        <!-- bootstrap datepicker -->
+        <script src="#{request.contextPath}/recursos/bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+        <!-- bootstrap color picker -->
+        <script src="#{request.contextPath}/recursos/bower_components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js"></script>
         <script>
             function test() {
                 $('#dataTableDetalle').DataTable({
@@ -1066,9 +1076,11 @@
                     }
                 })
             }
-
-
-
+        </script>
+        <script>
+            $(function () {
+                $('.my-colorpicker1').colorpicker();
+            })
         </script>
     </h:body>
 
