--- a/CobroCoactivo/web/paginas/PlanGeneral/Plan.xhtml
+++ b/CobroCoactivo/web/paginas/PlanGeneral/Plan.xhtml
@@ -40,10 +40,10 @@
                                             <ul class="nav nav-pills nav-stacked">
                                                 <ui:repeat value="#{PlanGeneralbean.listadoPlanGeneraleses}" var="listaPlangeneral">
                                                     <li>
-                                                        <div class="col-sm-1" style="background-color: #{listaPlangeneral.color}; padding: 10px; margin: 10px">
-                                                            
+                                                        <div jsf:id="color" class="col-sm-1" style="background-color: #{listaPlangeneral.color}; padding: 10px; margin: 10px;cursor: pointer">
+                                                            <f:ajax event="click" render="formPlanGeneral:contenedor"  listener="#{PlanGeneralbean.ListarEtapaGeneralesPorIdPlanGeneral(listaPlangeneral)}"/>
                                                         </div>
-                                                        <h:commandLink title="Editar Proceso Juridico" value=" #{listaPlangeneral.descripcion}" class="col-sm-9">
+                                                        <h:commandLink title="Editar Proceso Juridico" value=" #{listaPlangeneral.descripcion}" class="col-sm-8">
                                                             <f:ajax event="click" render="formPlanGeneral:contenedor"  listener="#{PlanGeneralbean.ListarEtapaGeneralesPorIdPlanGeneral(listaPlangeneral)}"/>
                                                         </h:commandLink>
                                                         <div jsf:id="test" class="col-sm-1" style="padding-bottom:10px;padding-top: 10px">
@@ -51,7 +51,6 @@
                                                                 <f:ajax event="click" render="formPlanGeneral:modalContent" listener="#{PlanGeneralbean.eventoActualizar(listaPlangeneral)}"/>
                                                             </i> 
                                                         </div>
-
                                                     </li>  
                                                 </ui:repeat> 
                                             </ul> 
@@ -65,9 +64,14 @@
                                     <!-- /. box -->
                                     <div class="box" style="border-top-color:#{PlanGeneralbean.planGenerales.color}" jsf:id="etapaGenerales" jsf:rendered="#{PlanGeneralbean.renderEtapaGeneral}">
                                         <div class="box-header with-border">
-                                            <h5 class="box-title">Etapas generales #{PlanGeneralbean.planGenerales.descripcion.toLowerCase()}</h5>
+                                            <h5 class="box-title">Etapas generales
+                                                <span class="label label-default">
+                                                    #{PlanGeneralbean.planGenerales.descripcion.toLowerCase()}
+                                                </span>
+                                            </h5>
                                             <div class="box-tools">
-                                                <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                                                <button type="button" class="btn btn-box-tool" data-widget="collapse">
+                                                    <i class="fa fa-minus"></i>
                                                 </button>
                                             </div>
                                         </div>
@@ -102,7 +106,15 @@
                                 <div class="col-md-9" jsf:id="fasesGenerales" jsf:rendered="#{PlanGeneralbean.renderFaseGeneral}">
                                     <div class="box" style="border-top-color:#{PlanGeneralbean.planGenerales.color}">
                                         <div class="box-header with-border">
-                                            <h:outputLabel id="tituloDetalleProceso" class="box-title" value="Fases Generales #{PlanGeneralbean.etapasGenerales.descripcion}"></h:outputLabel>
+                                            <h5 class="box-title">Fases Generales
+                                                <span class="label label-default" style="margin-right: 10px">
+                                                    #{PlanGeneralbean.planGenerales.descripcion.toLowerCase()}
+                                                </span>
+                                                <span class="label label-default" jsf:id="tituloDetalleProceso">
+                                                    #{PlanGeneralbean.etapasGenerales.descripcion.toLowerCase()}
+                                                </span>
+                                            </h5>
+                                            
                                             <!-- /.box-tools -->
                                             <div class="box-tools">
                                                 <h:commandLink type="button" class="btn btn-box-tool" id="btnAdd" onclick="$('#faseGeneral').modal('show');">
