--- a/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
+++ b/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
@@ -70,29 +70,40 @@
                                     </div>
                                 </div>
                                 <h:panelGroup id="tblUsuario">
-                                    <table class="table table-bordered ">
-                                        <thead>
-                                            <tr>
-                                                <th>Nombre</th>
-                                                <th>Estado</th>
-                                                <th>Acción</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <c:forEach items="#{gestionUsuariosBean.listadoUsuarios}" var="usuario">
+                                    <table class="table table-hover">
+                                        <div class="row">
+                                            <thead>
                                                 <tr>
-                                                    <td>#{usuario.nombre}</td>
-                                                    <td>#{usuario.estadoUsuarios.descripcion}</td>
-                                                    <td class="row">
-                                                        <h:commandLink class="fa fa-eye col-sm-4" action="detalleUsuario.xhtml">
-                                                            <f:setPropertyActionListener value="#{usuario}" target="#{requestBean.usuario}"/>
-                                                            <c:set value="&lt;section class=&quot;content-header&quot;&gt;&lt;ol class=&quot;breadcrumb&quot;&gt;&lt;li&gt;&lt;a href=&quot;inicio.htm&quot;&gt;&lt;i class=&quot;fa fa-home&quot;&gt;&lt;/i&gt; Inicio&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;i class=&quot;fa fa-user&quot;&gt;&lt;/i&gt; Usuario&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;gestionUsuarios.htm&quot;&gt;&lt;i class=&quot;fa fa-cogs&quot;&gt;&lt;/i&gt;Administra Usuario&lt;/a&gt;&lt;/li&gt;&lt;li class=&quot;active&quot;&gt;&lt;i class=&quot;fa fa-address-card&quot;&gt;&lt;/i&gt; Detalle Usuario&lt;/li&gt;&lt;/ol&gt;&lt;br/&gt;&lt;/section&gt;" var="valor"/>
-                                                            <f:setPropertyActionListener value="#{valor}" target="#{requestBean.ruta}"/>
-                                                        </h:commandLink>
-                                                    </td>
+                                                    <th class="col-md-3">Nombre usuario</th>
+                                                    <th class="col-md-3">Estado</th>
+                                                    <th class="col-md-3">Persona</th>
+                                                    <th class="col-md-3">Acción</th>
                                                 </tr>
-                                            </c:forEach>
-                                        </tbody>
+                                            </thead>
+                                            <tbody>
+                                                <c:forEach items="#{gestionUsuariosBean.listadoUsuarios}" var="usuario">
+                                                    <tr>
+                                                        <td>#{usuario.nombre}</td>
+                                                        <td>#{usuario.estadoUsuarios.descripcion}</td>
+                                                        <td>
+                                                            <h:commandLink>
+                                                                <f:setPropertyActionListener value="#{usuario.personas}" target="#{requestBean.personas}"/>
+                                                                <f:ajax event="click" listener="#{requestBean.ejemplo(usuario.personas)}"></f:ajax>
+                                                                <f:ajax event="click" listener="#{detallePersonasBean.init()}"></f:ajax>
+                                                                #{usuario.personas.nombre1} #{usuario.personas.apellido1}
+                                                            </h:commandLink>
+                                                        </td>
+                                                        <td class="row">
+                                                            <h:commandLink class="fa fa-eye col-sm-4" action="detalleUsuario.xhtml">
+                                                                <f:setPropertyActionListener value="#{usuario}" target="#{requestBean.usuario}"/>
+                                                                <c:set value="&lt;section class=&quot;content-header&quot;&gt;&lt;ol class=&quot;breadcrumb&quot;&gt;&lt;li&gt;&lt;a href=&quot;inicio.htm&quot;&gt;&lt;i class=&quot;fa fa-home&quot;&gt;&lt;/i&gt; Inicio&lt;/a&gt;&lt;/li&gt;&lt;li&gt;&lt;i class=&quot;fa fa-user&quot;&gt;&lt;/i&gt; Usuario&lt;/li&gt;&lt;li&gt;&lt;a href=&quot;gestionUsuarios.htm&quot;&gt;&lt;i class=&quot;fa fa-cogs&quot;&gt;&lt;/i&gt;Administra Usuario&lt;/a&gt;&lt;/li&gt;&lt;li class=&quot;active&quot;&gt;&lt;i class=&quot;fa fa-address-card&quot;&gt;&lt;/i&gt; Detalle Usuario&lt;/li&gt;&lt;/ol&gt;&lt;br/&gt;&lt;/section&gt;" var="valor"/>
+                                                                <f:setPropertyActionListener value="#{valor}" target="#{requestBean.ruta}"/>
+                                                            </h:commandLink>
+                                                        </td>
+                                                    </tr>
+                                                </c:forEach>
+                                            </tbody>
+                                        </div>
                                     </table>
                                 </h:panelGroup>
                             </div>
