--- a/CobroCoactivo/web/paginas/gestionUsuarios/detalleUsuario.xhtml
+++ b/CobroCoactivo/web/paginas/gestionUsuarios/detalleUsuario.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:jsf="http://xmlns.jcp.org/jsf">
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <h:body>
         <ui:composition template="./../../plantillas/PlantillaGeneral.xhtml">
             <ui:define name="content">
@@ -92,10 +92,48 @@
                                     <div class="nav-tabs-custom">
                                         <ul class="nav nav-tabs">
                                             <li class="active"> <a href="#activity" data-toggle="tab">Permisos</a></li>
-                                            <li><a href="#timeline" data-toggle="tab">Actividad</a></li>
+                                            <li ><a href="#timeline" data-toggle="tab">Actividad</a></li>
+                                            <li><a href="#Modulos" data-toggle="tab">Modulos</a></li>
                                         </ul>
                                         <div class="tab-content">
                                             <div class="tab-pane" id="activity">
+                                                <!-- The timeline -->
+                                            </div>
+                                            <div class="tab-pane" id="Modulos">
+                                                <div class="box box-danger">
+                                                    <div class="box-header with-border">
+                                                        <h3 class="box-title">Modulos</h3>
+                                                        <div class="box-tools">
+                                                            <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                                    <div class="box-body no-padding">
+                                                        <div id="accordion">
+                                                            <div class="panel-group">
+                                                                <c:forEach items="#{gestionUsuariosBean.listModulos}" var="listaModulos">
+                                                                    <div class="panel panel-default">
+                                                                        <div class="panel-heading" id="heading#{listaModulos.modId}">
+                                                                            <h4 class="panel-title row">
+                                                                                <div class="col-sm-11">
+                                                                                    <a class="cursor" data-toggle="collapse" data-target="#collapse#{listaModulos.modId}" aria-controls="collapse#{listaModulos.modId}">#{listaModulos.modNombre}</a>
+                                                                                    <span class="badge badge-pill badge-primary">#{listaModulos.listRecurso.size()}</span>
+                                                                                </div>
+                                                                            </h4>
+                                                                        </div>
+                                                                        <div id="collapse#{listaModulos.modId}" aria-labelledby="heading#{tabla1}" data-parent="#accordion" class="collapse">
+                                                                            <c:forEach items="#{listaModulos.listRecurso}" var="listaRecurso">
+                                                                                <p>
+                                                                                    #{listaRecurso.recNombre}
+                                                                                </p>                                                                                
+                                                                            </c:forEach>
+                                                                        </div>
+                                                                    </div>
+                                                                </c:forEach>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                             <!-- /.tab-pane -->
                                             <div class="tab-pane" id="timeline">
@@ -113,7 +151,7 @@
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title" id="myModalLabel">Restablecer contraseña</h4>
+                                            <h4 class="modal-title" id="myModalLabel">Actualizar contraseña</h4>
                                         </div>
                                         <div class="modal-body">
                                             <div class="row">
